--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <style href="miEstilo.css">
 <body>
     <h1>
         Aqui iria el titulo de la pagina
